More happiness for FindBugs.
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@1099857 13f79535-47bb-0310-9956-ffa450edef68